# hotchocolabot

./: .hypatia-baseline.json  CHANGELOG.adoc  CHANGELOG.md  CLAUDE.md  Cargo.toml  Containerfile  HANDOVER.md  LICENSE  MAINTAINERS.md  README.adoc  README.md  ROADMAP.adoc  RSR_COMPLIANCE.md
.github/workflows/: hypatia-scan.yml  learning-loop.yml  secret-scanner.yml
bots/glambot/: Cargo.toml
bots/gsbot/: requirements.txt
docs/: CITATIONS.adoc
docs/competition/: partnership_letter_template.md  submission_checklist.md  video_script_template.md
education/workshops/: workshop_curriculum.md
examples/: SafeDOMExample.affine  web-project-deno.json
fuzz/: Cargo.toml
hardware/assembly/: assembly_instructions.md
hardware/bom/: parts_list.md
hardware/schematics/: wiring_diagram.md
scripts/: submit-finding.sh
src/: main.rs
src/config/: mod.rs
src/control/: mod.rs
src/hardware/: display.rs  mock.rs  mod.rs  pump.rs  sensor.rs
src/safety/: mod.rs
