[package]
name = "hotchocolabot"
version = "0.1.0"
edition = "2021"
authors = ["UAL Creative Communities - MechCC"]
description = "Educational robotics platform teaching reverse engineering through an over-engineered hot chocolate dispenser"
license = "MPL-2.0"
repository = "https://github.com/Hyperpolymath/the-hotchocolabot"
readme = "README.md"
keywords = ["robotics", "education", "embedded", "raspberry-pi"]
categories = ["embedded", "hardware-support"]

[dependencies]
# Async runtime for concurrent hardware control
tokio = { version = "1.52.3", features = ["full"] }
async-trait = "0.1.89"

# Hardware interfacing
rppal = "0.17.1"  # Raspberry Pi GPIO/I2C/SPI support

# Configuration management
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8.23"

# Logging and diagnostics
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Error handling
thiserror = "1.0.69"
anyhow = "1.0.102"

# State machine for safety
smlang = "0.6.0"  # State machine language for formal verification

[dev-dependencies]
# Testing
tokio-test = "0.4.5"
mockall = "0.12.1"  # Mock objects for hardware testing
criterion = "0.5.1"  # Benchmarking
proptest = "1.11.0"  # Property-based testing
rand = "0.8.6"  # Random number generation for testing

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols

[profile.dev]
opt-level = 1       # Some optimization for embedded testing

[[bin]]
name = "hotchocolabot"
path = "src/main.rs"

[workspace]
members = []
